force-app/main/default/objects/Loan_Configuration__mdt/Loan_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Loan_Configuration</label>
    <pluralLabel>Loan_Configurations</pluralLabel>
</CustomObject>