force-app/main/default/objects/Loan_Configuration__mdt/fields/Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rate__c</fullName>
    <label>Annual Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>