force-app/main/default/objects/Loan_Configuration__mdt/fields/SBA_Fees__c.field-meta.xml
<CustomField>
    <fullName>SBA_Fees__c</fullName>
    <label>SBA Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>